<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.SignUpActivity"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_dimension_4"
            android:src="@drawable/personal_trainer"
            android:paddingTop="@dimen/padding_2"
            android:paddingBottom="@dimen/padding_2"/>

        <TextView
            android:id="@+id/sign_up_title"
            style="@style/BoldTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/sign_up"
            android:textColor="@color/my_green"
            android:textSize="28sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="165dp"
            tools:layout_editor_absoluteY="264dp" />

        <TextView
            android:id="@+id/sign_up_subtitle"
            style="@style/NormalTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/poppins_black"
            android:text="@string/to_begin_kindly_create_an_acount"
            android:textColor="@color/power_workouts_black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/nameEdit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/quadraple_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginBottom="5dp"
            android:background="@drawable/by_button"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textAppearance="@style/NormalTextStyle" />

        <EditText
            android:id="@+id/emailEdit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginBottom="5dp"
            android:background="@drawable/by_button"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            />

        <EditText
            android:id="@+id/passWord"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginBottom="5dp"
            android:background="@drawable/by_button"
            android:fontFamily="@font/poppins_light"
            android:hint="Password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textAppearance="@style/NormalTextStyle" />

        <EditText
            android:id="@+id/confirmPassWord"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginBottom="5dp"
            android:background="@drawable/by_button"
            android:fontFamily="@font/poppins_light"
            android:hint="Confirm password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textAppearance="@style/NormalTextStyle" />

        <Button
            android:id="@+id/createUser"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/quadraple_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@color/power_workouts_black" />

        <ProgressBar
            android:id="@+id/firebaseProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:visibility="gone" />

        <TextView
            android:id="@+id/loginProgressText"
            android:layout_margin="20dp"
            android:textAlignment="center"
            android:visibility="gone"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/loginText"
            style="@style/NormalTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="@dimen/quadraple_margin"
            android:autoLink="all"
            android:fontFamily="@font/poppins_black"
            android:text="Already have an account? Login Here."
            android:textColor="@color/power_workouts_black" />

    </LinearLayout>
</ScrollView>